--- a/index.html
+++ b/index.html
@@ -1,12 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bryce's First Website</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <title>FitStart Central | Beginner Fitness Made Simple</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="FitStart Central provides beginner-friendly workouts, basic nutrition tips, and progress tracking tools to help you start your fitness journey with confidence.">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  Hello, world! I am Bryce. I am learning how to create websites.  
+  <header class="site-header">
+    <div class="logo-area">
+      <h1>FitStart Central</h1>
+      <p class="tagline">Beginner Fitness Made Simple</p>
+    </div>
+  </header>
+
+  <nav class="main-nav">
+    <ul>
+      <li><a href="index.html" class="active">Home</a></li>
+      <li><a href="#workouts">Workout Guides</a></li>
+      <li><a href="#nutrition">Nutrition Basics</a></li>
+      <li><a href="#progress">Progress Tracking</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
+
+  <main class="content">
+    <section class="hero">
+      <div class="hero-text">
+        <h2>Welcome to FitStart Central</h2>
+        <p>
+          FitStart Central is designed for beginners who want clear, realistic guidance on how to start working out,
+          eat better, and stay consistent. No confusing jargon or extreme programs—just simple steps you can follow.
+        </p>
+        <p>
+          Explore our workout guides, basic nutrition tips, and progress tracking tools to build a routine that fits
+          your lifestyle and long-term goals.
+        </p>
+      </div>
+      <div class="hero-image">
+        <!-- Replace src with your actual image file later -->
+        <div class="image-placeholder">Hero Image (Fitness Photo)</div>
+      </div>
+    </section>
+
+    <section class="highlights">
+      <h3>What You’ll Find Here</h3>
+      <ul>
+        <li>Beginner-friendly full-body and split workout routines.</li>
+        <li>Simple nutrition guidance focused on balance, not restriction.</li>
+        <li>Progress tracking ideas to help you stay motivated over time.</li>
+      </ul>
+    </section>
+
+    <section class="feature-grid">
+      <article class="feature-card" id="workouts">
+        <h3>Workout Guides</h3>
+        <div class="image-small">Image – Workouts</div>
+        <p>
+          Learn basic exercise techniques and follow structured routines tailored for beginners,
+          including strength, cardio, and mobility sessions.
+        </p>
+      </article>
+
+      <article class="feature-card" id="nutrition">
+        <h3>Nutrition Basics</h3>
+        <div class="image-small">Image – Nutrition</div>
+        <p>
+          Understand macronutrients, portion sizes, and simple meal ideas that support your training
+          without requiring strict dieting.
+        </p>
+      </article>
+
+      <article class="feature-card" id="progress">
+        <h3>Progress Tracking</h3>
+        <div class="image-small">Image – Progress</div>
+        <p>
+          Discover ways to track strength, endurance, and habit consistency so you can see your improvements
+          even when the scale doesn’t move.
+        </p>
+      </article>
+    </section>
+
+    <section class="cta" id="contact">
+      <h3>Ready to Start Your Fitness Journey?</h3>
+      <p>
+        Have questions or ideas for future content? Reach out and let us know what would help you most as you
+        begin your fitness journey.
+      </p>
+      <a href="#progress" class="btn-primary">Learn About Progress Tracking</a>
+    </section>
+  </main>
+
+  <footer class="site-footer">
+    <div class="footer-links">
+      <span>Quick Links:</span>
+      <a href="#workouts">Workouts</a>
+      <a href="#nutrition">Nutrition</a>
+      <a href="#progress">Progress</a>
+      <a href="#contact">Contact</a>
+    </div>
+    <div class="footer-meta">
+      <p>© 2026 FitStart Central. All rights reserved.</p>
+      <p>Contact: info@fitstartcentral.com</p>
+    </div>
+  </footer>
 </body>
 </html>
