--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   <nav class="main-nav">
     <ul>
       <li><a href="index.html" class="active">Home</a></li>
-      <li><a href="#workouts">Workout Guides</a></li>
-      <li><a href="#nutrition">Nutrition Basics</a></li>
+      <li><a href="workouts.html">Workout Guides</a></li>
+      <li><a href="nutrition.html">Nutrition Basics</a></li>
       <li><a href="#progress">Progress Tracking</a></li>
       <li><a href="#contact">Contact</a></li>
     </ul>
@@ -39,7 +39,7 @@
         </p>
       </div>
       <div class="hero-image">
-        <!-- Replace src with your actual image file later -->
+        <!-- Replace src with your actual image later -->
         <div class="image-placeholder">Hero Image (Fitness Photo)</div>
       </div>
     </section>
@@ -53,26 +53,28 @@
       </ul>
     </section>
 
-    <section class="feature-grid">
-      <article class="feature-card" id="workouts">
+    <section class="feature-grid" id="progress">
+      <article class="feature-card">
         <h3>Workout Guides</h3>
         <div class="image-small">Image – Workouts</div>
         <p>
           Learn basic exercise techniques and follow structured routines tailored for beginners,
           including strength, cardio, and mobility sessions.
         </p>
+        <p><a href="workouts.html" class="text-link">View workout plans →</a></p>
       </article>
 
-      <article class="feature-card" id="nutrition">
+      <article class="feature-card">
         <h3>Nutrition Basics</h3>
         <div class="image-small">Image – Nutrition</div>
         <p>
           Understand macronutrients, portion sizes, and simple meal ideas that support your training
           without requiring strict dieting.
         </p>
+        <p><a href="nutrition.html" class="text-link">Explore nutrition tips →</a></p>
       </article>
 
-      <article class="feature-card" id="progress">
+      <article class="feature-card">
         <h3>Progress Tracking</h3>
         <div class="image-small">Image – Progress</div>
         <p>
@@ -88,17 +90,16 @@
         Have questions or ideas for future content? Reach out and let us know what would help you most as you
         begin your fitness journey.
       </p>
-      <a href="#progress" class="btn-primary">Learn About Progress Tracking</a>
+      <a href="workouts.html" class="btn-primary">Start with a Workout Plan</a>
     </section>
   </main>
 
   <footer class="site-footer">
     <div class="footer-links">
       <span>Quick Links:</span>
-      <a href="#workouts">Workouts</a>
-      <a href="#nutrition">Nutrition</a>
-      <a href="#progress">Progress</a>
-      <a href="#contact">Contact</a>
+      <a href="index.html">Home</a>
+      <a href="workouts.html">Workouts</a>
+      <a href="nutrition.html">Nutrition</a>
     </div>
     <div class="footer-meta">
       <p>© 2026 FitStart Central. All rights reserved.</p>
